[bug fix] a layout issue with context menu under Aristo theme

--- a/src/main/webapp/styles/app/home.css
+++ b/src/main/webapp/styles/app/home.css
@@ -21,6 +21,10 @@
     position:fixed;
 }
 
+.ui-menuitem-icon {
+    padding-left: 3px;
+}
+
 #fragment-group {
 	margin: 15px 0px 0px 2px;
 }
